examples/hashmap/include/fuzzy_log.h

typedef uint32_t ColorID;
struct colors
{
	//! number of entries in mycolors
	size_t numcolors;
	//! pointer to ColorID[numcolors]
	ColorID *mycolors;
};
typedef struct DAGHandle DAGHandle;
typedef struct write_id {
	uint64_t p1;
	uint64_t p2;
} write_id;
//! Reads a valid next node from the new nodes discovered with the latests
//! snapshot. If there are no such nodes (i.e. all new nodes have been read)
//! data_read and inhabits_out->numcolors will be set to 0.
//!
//! @param handle
//!     The DAGHandle being worked through.
//!
//! @param[out] data_out
//!     The size in bytes of the data that was read.
//!
//! @param[out] data_read
//!     The data that was read.
//!
//! @param[out] inhabits_out
//!     A pointer to a `struct colors` which will be populated with the colors
//!     inhabited by the node just read.
//!     If a node was read inhabits_out->numcolors will contain the number of
//!     colors said node inhabits and inhabits_out->mycolors will be a pointer
//!     to a _new_ array containing said colors ColorID. This array should be
//!     freed with `free`
//!     If no new nodes remain, inhabits_out-numcolors will be 0 and
//!     inhabits_out->mycolors will be in an undefined state and
//!     _must not be read_.
//!
//NOTE we need either a way to specify data size, or to pass out a pointer
// this version simple assumes that no data+metadat passed in or out will be
// greater than DELOS_MAX_DATA_SIZE
void get_next(DAGHandle *handle, char *data_out, size_t *data_read, struct colors* inhabits_out);
//! Flush all appends that have already been completed.
//!
//! @param handle
//!     The DAGHandle being worked through.
//!
void flush_completed_appends(DAGHandle *handle);
//! Waits for all outstanding appends to be ACK'd.
//!
//! @param handle
//!     The DAGHandle being worked through.
//!
void wait_for_all_appends(DAGHandle *handle);
//! Waits for any append to be ACK'd, or returns immediately if there are none
//! in-flight
//!
//! @param handle
//!     The DAGHandle being worked through.
//!
//! @return the write_id of the write that completed,
//!         WRITE_ID_NIL if there were no pending writes
//!
write_id wait_for_any_append(DAGHandle *handle);
//! Checks if there are any ACK'd appends and if so returns the first ones id
//!
//! @param handle
//!     The DAGHandle being worked through.
//!
//! @return the write_id of the write that completed,
//!         WRITE_ID_NIL if there were no completed writes
//!
write_id try_wait_for_any_append(DAGHandle *handle);
//! Waits for an append with a specified id to be ACK'd,
//! or for no appends to be in-flight, whichever comes first.
//!
//! @param handle
//!     The DAGHandle being worked through.
//!
void wait_for_a_specific_append(DAGHandle *handle, write_id id);
//! If there is no unread updates attempts to take a snapshot of the interesting
//! colors
//!
// NOTE currently a nop if there are buffered nodes waiting to be read,
//  eventually this will change to start prefetching even if there are still
//  unread data
void snapshot(DAGHandle *handle);
//! Closes and frees a DAGHandle
void close_dag_handle(DAGHandle *handle);
////////////////////////////////////
//         Server Bindings        //
////////////////////////////////////

//! Starts a fuzzy log server which listens at server_ip in the _current_ thread.
//!
//! @param server_ip
//!     a string of the form "<ip address>:<port>" at which the server should
//!     listen
//!
//! NOTE this function _never_ returns, as it immediately starts running the
//!   server
//!
void start_fuzzy_log_server(const char * server_ip);
//! Just like start_fuzzy_log_server except it starts the server in a _new_ thread.
void start_fuzzy_log_server_thread(const char * server_ip);