examples/java-client2/src/c_link/FuzzyLogLibrary.java


	/**
	 * !<br>
	 * Original signature : <code>write_id async_causal_append(DAGHandle*, char*, size_t, colors*, colors*, fuzzy_log_location*, size_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:81</i>
	 */
	c_link.write_id.ByValue async_causal_append(PointerByReference handle, Pointer data, size_t data_size,
			colors.ByReference inhabits, colors.ByReference depends_on, fuzzy_log_location happens_after, size_t num_happens_after);

	/**
	 * !<br>
	 * Original signature : <code>write_id async_simple_causal_append(DAGHandle*, char*, size_t, colors*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:86</i><br>
	 * @deprecated use the safer methods {@link #async_simple_causal_append(com.sun.jna.ptr.PointerByReference, java.nio.ByteBuffer, com.ochafik.lang.jnaerator.runtime.size_t, c_link.colors, c_link.colors)} and {@link #async_simple_causal_append(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer, com.ochafik.lang.jnaerator.runtime.size_t, c_link.colors, c_link.colors)} instead
	 */
	@Deprecated
	c_link.write_id.ByValue async_simple_causal_append(Pointer handle, Pointer data, size_t data_size,
			colors.ByReference inhabits, colors.ByReference happens_after);

	/**
	 * !<br>
	 * Original signature : <code>write_id async_simple_causal_append(DAGHandle*, char*, size_t, colors*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:86</i>
	 */
	c_link.write_id.ByValue async_simple_causal_append(Pointer handle, ByteBuffer data, size_t data_size,
			colors.ByReference inhabits, colors.ByReference happens_after);

	/**
	 * !<br>
	 * Original signature : <code>write_id async_simple_causal_append(DAGHandle*, char*, size_t, colors*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:86</i>
	 */
	c_link.write_id.ByValue async_simple_causal_append(PointerByReference handle, Pointer data, size_t data_size,
			colors.ByReference inhabits, colors.ByReference happens_after);

	/**
	 * !<br>
	 * Original signature : <code>void get_next(DAGHandle*, char*, size_t*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:91</i><br>
	 * @deprecated use the safer methods {@link #get_next(com.sun.jna.ptr.PointerByReference, java.nio.ByteBuffer, com.ochafik.lang.jnaerator.runtime.size_tByReference, c_link.colors)} and {@link #get_next(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer, com.ochafik.lang.jnaerator.runtime.size_tByReference, c_link.colors)} instead
	 */
	@Deprecated
	void get_next(Pointer handle, Pointer data_out, size_tByReference data_read, colors.ByReference inhabits_out);

	/**
	 * !<br>
	 * Original signature : <code>void get_next(DAGHandle*, char*, size_t*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:91</i>
	 */
	void get_next(Pointer handle, ByteBuffer data_out, size_tByReference data_read, colors.ByReference inhabits_out);

	/**
	 * !<br>
	 * Original signature : <code>void get_next(DAGHandle*, char*, size_t*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:91</i>
	 */
	void get_next(PointerByReference handle, Pointer data_out, size_tByReference data_read, colors.ByReference inhabits_out);

	/**
	 * !<br>
	 * Original signature : <code>get_next_val get_next2(DAGHandle*, size_t*, size_t*)</code><br>
	 * <i>native declaration : fuzzy_log.h:100</i><br>
	 * @deprecated use the safer method {@link #get_next2(com.sun.jna.ptr.PointerByReference, com.ochafik.lang.jnaerator.runtime.size_tByReference, com.ochafik.lang.jnaerator.runtime.size_tByReference)} instead
	 */
	c_link.get_next_val.ByValue get_next2(Pointer handle, size_tByReference data_size,
			size_tByReference locs_read);

	/**
	 * !<br>
	 * Original signature : <code>get_next_val get_next2(DAGHandle*, size_t*, size_t*)</code><br>
	 * <i>native declaration : fuzzy_log.h:100</i>
	 */
	c_link.get_next_val.ByValue get_next2(PointerByReference handle, size_tByReference data_size,
			size_tByReference locs_read);

	/**
	 * !<br>
	 * Original signature : <code>get_next_val async_get_next2(DAGHandle*, size_t*, size_t*)</code><br>
	 * <i>native declaration : fuzzy_log.h:105</i><br>
	 * @deprecated use the safer method {@link #async_get_next2(com.sun.jna.ptr.PointerByReference, com.ochafik.lang.jnaerator.runtime.size_tByReference, com.ochafik.lang.jnaerator.runtime.size_tByReference)} instead
	 */
	@Deprecated
	c_link.get_next_val.ByValue async_get_next2(Pointer handle, size_tByReference data_size,
			size_tByReference locs_read);

	/**
	 * !<br>
	 * Original signature : <code>get_next_val async_get_next2(DAGHandle*, size_t*, size_t*)</code><br>
	 * <i>native declaration : fuzzy_log.h:105</i>
	 */
	c_link.get_next_val.ByValue async_get_next2(PointerByReference handle, size_tByReference data_size,
			size_tByReference locs_read);

	/**
	 * !<br>
	 * Original signature : <code>void flush_completed_appends(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:110</i><br>
	 * @deprecated use the safer method {@link #flush_completed_appends(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated
	void flush_completed_appends(Pointer handle);

	/**
	 * !<br>
	 * Original signature : <code>void flush_completed_appends(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:110</i>
	 */
	void flush_completed_appends(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>void wait_for_all_appends(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:115</i><br>
	 * @deprecated use the safer method {@link #wait_for_all_appends(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated
	void wait_for_all_appends(Pointer handle);

	/**
	 * !<br>
	 * Original signature : <code>void wait_for_all_appends(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:115</i>
	 */
	void wait_for_all_appends(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>write_id wait_for_any_append(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:120</i><br>
	 * @deprecated use the safer method {@link #wait_for_any_append(com.sun.jna.ptr.PointerByReference)} instead
	 */

	c_link.write_id.ByValue wait_for_any_append(Pointer handle);

	/**
	 * !<br>
	 * Original signature : <code>write_id wait_for_any_append(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:120</i>
	 */
	c_link.write_id.ByValue wait_for_any_append(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>write_id try_wait_for_any_append(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:125</i><br>
	 * @deprecated use the safer method {@link #try_wait_for_any_append(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated
	c_link.write_id.ByValue try_wait_for_any_append(Pointer handle);

	/**
	 * !<br>
	 * Original signature : <code>write_id try_wait_for_any_append(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:125</i>
	 */
	c_link.write_id.ByValue try_wait_for_any_append(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>void wait_for_a_specific_append(DAGHandle*, write_id)</code><br>
	 * <i>native declaration : fuzzy_log.h:130</i><br>
	 * @deprecated use the safer method {@link #wait_for_a_specific_append(com.sun.jna.ptr.PointerByReference, c_link.write_id.ByValue)} instead
	 */
	@Deprecated
	void wait_for_a_specific_append(Pointer handle, c_link.write_id.ByValue id);

	/**
	 * !<br>
	 * Original signature : <code>void wait_for_a_specific_append(DAGHandle*, write_id)</code><br>
	 * <i>native declaration : fuzzy_log.h:130</i>
	 */
	void wait_for_a_specific_append(PointerByReference handle, c_link.write_id.ByValue id);

	/**
	 * !<br>
	 * Original signature : <code>write_locations wait_for_a_specific_append_and_locations(DAGHandle*, write_id)</code><br>
	 * <i>native declaration : fuzzy_log.h:135</i><br>
	 * @deprecated use the safer method {@link #wait_for_a_specific_append_and_locations(com.sun.jna.ptr.PointerByReference, c_link.write_id.ByValue)} instead
	 */
	@Deprecated
	c_link.write_locations.ByValue wait_for_a_specific_append_and_locations(Pointer handle, c_link.write_id.ByValue id);

	/**
	 * !<br>
	 * Original signature : <code>write_locations wait_for_a_specific_append_and_locations(DAGHandle*, write_id)</code><br>
	 * <i>native declaration : fuzzy_log.h:135</i>
	 */
	c_link.write_locations.ByValue wait_for_a_specific_append_and_locations(PointerByReference handle,
			c_link.write_id.ByValue id);

	/**
	 * !<br>
	 * Original signature : <code>write_id_and_locs try_wait_for_any_append_and_location(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:140</i><br>
	 * @deprecated use the safer method {@link #try_wait_for_any_append_and_location(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated
	c_link.write_id_and_locs.ByValue try_wait_for_any_append_and_location(Pointer handle);

	/**
	 * !<br>
	 * Original signature : <code>write_id_and_locs try_wait_for_any_append_and_location(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:140</i>
	 */
	c_link.write_id_and_locs.ByValue try_wait_for_any_append_and_location(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>void snapshot(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:145</i><br>
	 * @deprecated use the safer method {@link #snapshot(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated
	void snapshot(Pointer handle);

	/**
	 * !<br>
	 * Original signature : <code>void snapshot(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:145</i>
	 */
	void snapshot(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>void snapshot_colors(DAGHandle*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:150</i><br>
	 * @deprecated use the safer method {@link #snapshot_colors(com.sun.jna.ptr.PointerByReference, c_link.colors)} instead
	 */
	@Deprecated
	void snapshot_colors(Pointer handle, colors.ByReference colors);

	/**
	 * !<br>
	 * Original signature : <code>void snapshot_colors(DAGHandle*, colors*)</code><br>
	 * <i>native declaration : fuzzy_log.h:150</i>
	 */
	void snapshot_colors(PointerByReference handle, colors.ByReference colors);

	/**
	 * ! Closes and frees a DAGHandle<br>
	 * Original signature : <code>void close_dag_handle(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:155</i><br>
	 * @deprecated use the safer method {@link #close_dag_handle(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated
	void close_dag_handle(Pointer handle);

	/**
	 * ! Closes and frees a DAGHandle<br>
	 * Original signature : <code>void close_dag_handle(DAGHandle*)</code><br>
	 * <i>native declaration : fuzzy_log.h:155</i>
	 */
	void close_dag_handle(PointerByReference handle);

	/**
	 * !<br>
	 * Original signature : <code>void start_fuzzy_log_server(const char*)</code><br>
	 * <i>native declaration : fuzzy_log.h:160</i><br>
	 * @deprecated use the safer methods {@link #start_fuzzy_log_server(java.lang.String)} and {@link #start_fuzzy_log_server(com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	void start_fuzzy_log_server(Pointer server_ip);

	/**
	 * !<br>
	 * Original signature : <code>void start_fuzzy_log_server(const char*)</code><br>
	 * <i>native declaration : fuzzy_log.h:160</i>
	 */
	void start_fuzzy_log_server(String server_ip);

	/**
	 * ! Just like start_fuzzy_log_server except it starts the server in a _new_ thread.<br>
	 * Original signature : <code>void start_fuzzy_log_server_thread(const char*)</code><br>
	 * <i>native declaration : fuzzy_log.h:165</i><br>
	 * @deprecated use the safer methods {@link #start_fuzzy_log_server_thread(java.lang.String)} and {@link #start_fuzzy_log_server_thread(com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	void start_fuzzy_log_server_thread(Pointer server_ip);
